//
// Licensed to the Apache Software Foundation (ASF) under one or more
// contributor license agreements.  See the NOTICE file distributed with
// this work for additional information regarding copyright ownership.
// The ASF licenses this file to You under the Apache License, Version 2.0
// (the "License"); you may not use this file except in compliance with
// the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package dubbo.v1.auth;

import "google/protobuf/struct.proto";

option go_package = "/api/security/v1alpha3";

message DubboCertificateRequest {
  string csr = 1;
  int64 validity_duration = 2;
  google.protobuf.Struct metadata = 3;
}

message DubboCertificateResponse {
  repeated string cert_chain = 1;
}

service DubboCertificateService {
  rpc CreateCertificate(DubboCertificateRequest) returns (DubboCertificateResponse) {}
}